# colossus

./: .dockerignore  .env.example  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  compose.yml  docker-compose.postgres.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
colossus/: settings.py  urls.py  utils.py
colossus/apps/accounts/management/commands/: create_admin.py
colossus/apps/campaigns/: api.py  tasks.py  views.py
colossus/apps/core/: apps.py  views.py
colossus/templates/: 403.html  404.html  500.html
requirements/: base.txt
