[project]
name = "colossus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4==4.7.1",
    "celery==4.2.1",
    "dj-database-url==0.5.0",
    "django==2.1.5",
    "django-crispy-forms==1.7.2",
    "django-debug-toolbar==1.11",
    "django-ratelimit==2.0.0",
    "geoip2==2.9.0",
    "gunicorn==19.9.0",
    "html2text==2018.1.9",
    "psycopg2-binary==2.8.6",
    "python-decouple==3.1",
    "pytz==2018.9",
    "raven==6.10.0",
    "requests==2.21.0",
    "setuptools>=80.9.0",
    "whitenoise==4.1.2",
]
